--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <table cellspacing="20">
         <tr>
-            <td><img src="Images/New Xbiot Pic (1).png" alt="Picture of Or Adziashvili" /></td>
+            <td><img src="Images/New Xbiot Pic.png" alt="Picture of Or Adziashvili" width="250"></td>
             <td>
                 <h1>Or Adziashvili</h1>
                 <p>
