--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Or's Personal Site</title>
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
-
     <table cellspacing="20">
         <tr>
             <td><img src="Images/New Xbiot Pic.png" alt="Picture of Or Adziashvili" width="250"></td>
@@ -68,9 +68,8 @@
         </tr>
     </table>
     <hr>
+    <br>
     <a href="hobbies.html">My Hobbies</a>
-    <br>
-    <br>
     <a href="contact.html">Contact Me</a>
 </body>
 
